style.css
#block2 {float:right;width: 78%; min-width:400px;}
#block3 {float:left;width: 20%; min-width:320px;}
 
.jqm-demos .jqm-header {
border-top: 4px solid #3eb249;
background-color:#fff;
padding: 0;
min-height:0px;
}

.ui-page {
  min-height:0px;
}

.ui-title{
  margin: 0 10%;
}

.center-wrapper{
text-align: center;
}
.center-wrapper * {
margin: 1 auto;
}

.jqm-demos .jqm-content > h1.starthead {
font-size: 3.5em;
width: 50%;
min-width: 300px;
max-width: 600px;
margin: 0em auto 0em auto;
text-align: center;
font-family: 'Open Sans', sans-serif;
font-weight: 300;
}

.ui-page-theme-a {
	text-shadow:none;
	color: #131313;
	text-shadow:none;
}

.ui-page-theme-a a {
	color: #131313
}


.ui-page-theme-a a:visited, html .ui-bar-a a:visited, html .ui-body-a a:visited, html body .ui-group-theme-a a:visited {
	color:#000;
}

a#ep2014list table, .dc-data-grid {clear:both;}
.dc-table-label {background: #F5F5F5; font-weight:bold; }
.x line {stroke:none;}

body {font-family: sans-serif, arial, helvetica;}

.dc-data-grid, .dc-grid-group {clear:both}

.dc-grid-group {
		/*background-color: #F5F5F5;*/
		/*border: 1px solid #E3E3E3;
        border-radius: 4px;
        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;*/
min-height: 20px;
padding: 5px 5px 5px 20px;
}

.score {
position: absolute;
right: 21px;
color: #111;
background: rgba(255, 255, 255, 0.65);
font-size: 40px;
padding: 1px 1px;
bottom: 70px;
font-weight: bold;
-webkit-border-radius: 6x;
-moz-border-radius: 6px;
border-radius: 6px;
}

#thumbsup {
	float:left;
}

/*Popup modal styles*/

#infobox {
margin-left:auto;
margin-right:auto;
text-shadow:none;
width:60%;
border: 5px #4E4E4E solid;
}

#infobox p {
font-size:0.75em;
  }

.ui-block-a {
width:15%;
margin-top:5px;
}

.ui-block-b {
width:15%;
margin-top:5px;
}

/* stack all grids below 40em (640px) */
/*@media all and (max-width: 35em) {
	.my-breakpoint .ui-block-a,
	.my-breakpoint .ui-block-b,{
		width: 100%;
		float: none;
	}

	#infobox {
		width:100%;
	}	
}
*/

.dc-grid-item>div {
padding: 5px;
border-color: #E7E7E7;
border-radius: 4px;
text-align: center;
box-shadow: 3 -2px -2px rgba(82, 81, 81, 1) inset;
height: 320px;
}

.dc-grid-item>div:hover { 
opacity: 0.8;
cursor:pointer;
}

.dc-grid-item {
position:relative;
float:left;
      min-height:320px;
margin:0 10px 0px 0;
width:200px;
  background-color: #F8F8F8;
  border-color: #E7E7E7;
  border-radius: 4px;
  text-align:center;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
margin-bottom: 8px;
}

.dc-grid-item img {width:170px;height:215px}
.dc-grid-top h1 {font-size:22px;}
.dc-grid-top h2 {font-size:15px;color: #121212;text-decoration:none;font-weight: bold; margin-top:8px;}



/*Flag sprites CSS*/
.flag {
	width: 25px;
	height: 15px;
	background:url(flags.png) no-repeat
}

.flag.flag-ad {background-position: -25px 0}
.flag.flag-al {background-position: -50px 0}
.flag.flag-at {background-position: -75px 0}
.flag.flag-ba {background-position: -100px 0}
.flag.flag-be {background-position: -125px 0}
.flag.flag-bg {background-position: -150px 0}
.flag.flag-by {background-position: 0 -15px}
.flag.flag-ch {background-position: -25px -15px}
.flag.flag-cz {background-position: -50px -15px}
.flag.flag-de {background-position: -75px -15px}
.flag.flag-dk {background-position: -100px -15px}
.flag.flag-ee {background-position: -125px -15px}
.flag.flag-es {background-position: -150px -15px}
.flag.flag-fi {background-position: 0 -30px}
.flag.flag-fo {background-position: -25px -30px}
.flag.flag-fr {background-position: -50px -30px}
.flag.flag-gb {background-position: -75px -30px}
.flag.flag-gi {background-position: -100px -30px}
.flag.flag-gr {background-position: -125px -30px}
.flag.flag-hr {background-position: -150px -30px}
.flag.flag-hu {background-position: 0 -45px}
.flag.flag-ie {background-position: -25px -45px}
.flag.flag-is {background-position: -50px -45px}
.flag.flag-it {background-position: -75px -45px}
.flag.flag-li {background-position: -100px -45px}
.flag.flag-lt {background-position: -125px -45px}
.flag.flag-lu {background-position: -150px -45px}
.flag.flag-lv {background-position: 0 -60px}
.flag.flag-mc {background-position: -25px -60px}
.flag.flag-md {background-position: -50px -60px}
.flag.flag-me {background-position: -75px -60px}
.flag.flag-mk {background-position: -100px -60px}
.flag.flag-mt {background-position: -125px -60px}
.flag.flag-nl {background-position: -150px -60px}
.flag.flag-no {background-position: 0 -75px}
.flag.flag-pl {background-position: -25px -75px}
.flag.flag-pt {background-position: -50px -75px}
.flag.flag-ro {background-position: -75px -75px}
.flag.flag-rs {background-position: -100px -75px}
.flag.flag-ru {background-position: -125px -75px}
.flag.flag-se {background-position: -150px -75px}
.flag.flag-si {background-position: 0 -90px}
.flag.flag-sk {background-position: -25px -90px}
.flag.flag-sm {background-position: -50px -90px}
.flag.flag-ua {background-position: -75px -90px}
.flag.flag-va {background-position: -100px -90px}
/*End*/


/*Hide some stuff*/
a:-webkit-any-link {
text-decoration: none;
}

.age {display:none}
.dc-chart.gender .pie-slice {font-size:40px;}

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 12px;
  background: rgba(200, 200, 200, 0.8);
  color: #222;
  border-radius: 2px;
  pointer-events: none;
}

.d3-tip h2{ font-size:14px;color:#222;}
.d3-tip ul{ padding:10px 0 0 10px; margin:0}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
  box-sizing: border-box;
  display: inline;
  font-size: 10px;
  width: 100%;
  line-height: 1;
  color: rgba(200, 200, 200, 0.8);
  position: absolute;
  pointer-events: none;
}

/* Northward tooltips */
.d3-tip.n:after {
  content: "\25BC";
  margin: -1px 0 0 0;
  top: 100%;
  left: 0;
  text-align: center;
}

/* Eastward tooltips */
.d3-tip.e:after {
  content: "\25C0";
  margin: -4px 0 0 0;
  top: 50%;
  left: -8px;
}

/* Southward tooltips */
.d3-tip.s:after {
  content: "\25B2";
  margin: 0 0 1px 0;
  top: -8px;
  left: 0;
  text-align: center;
}

/* Westward tooltips */
.d3-tip.w:after {
  content: "\25B6";
  margin: -4px 0 0 -1px;
  top: 50%;
  left: 100%;
}
  
.d3-tip.animate {
    animation: bounceIn 0.2s ease-out;
    -webkit-animation: bounceIn 0.2s ease-out;
  }

.bar_score svg {position:relative;}
.bar_score div#avg_score {
  font-size: 130;
  color: #111;
  opacity: 0.5;
  margin-bottom:-170px;
  margin-left:auto;
  margin-right:auto;
  width:inherit;
  opacity: 0.5;
}


.dc-data-count .filter-count {
color: #111;
font-weight: bold;
}

.dc-data-count .total-count {
color: #111;
}

.landing-button {
	margin-left:auto;
	margin-right:auto;
	width:50%;
}

.graph_titles {
font-size: 0.5em;
color: #232323;
margin-left: auto;
margin-right: auto;
}

.graph_titles h1 {
  font-size:18px;
}

.parties-box {
	width:230px;
}

#infobox_info li{
list-style-type: none;
}

#score {
	font-size: 6em;
  display: block;
position: absolute;
top: 10px ;
right: 60px;
}

.group .deselected path {opacity:1}
.group  path {stroke:lightgrey}

.ui-header h2.ui-title b {color:#2c851c}


.resetall {clear:both}
#search-box label {float:none;width:100%}
#search-box ui-input-search {width:auto;float:none;}

.abstention {border-color:lightgrey}
.pro {border-color:green;}
.against {border-color:red;}
.panel-body {background-color:white;}
.pro .panel-heading {background-color:green;color:white}
.against .panel-heading {background-color:red;color:white}
.not.mep .panel-heading {text-decoration:line-through}

.dc-chart g.axis.x text{
  cursor:pointer;
  pointer-events: auto;
}

.menu-holder {
  width: 99px;
float: right;
top: 10px;
}

.modal {
background-color: #FFF;
max-height: 70%;
top: 10%;
bottom: 10%;
}

.modal-header {
  border-bottom:none;
}

.close {
  font-size:3em;
  opacity:0.6;
}

.infobox_content {
  padding: 10px;
}

.each_vote_container {
  min-height: 160px;
}

.panel-title {
  font-weight: bold;
}

.panel {
  min-height: 190px;
}

.panel-body{
  padding:10px;
}

div.dc-chart {
  float:none;
}

.dc-chart svg {
    display: block;
    margin: auto;
}

.jumbotron {
 background-color: rgba(0,0,0,0.6); 
 color: white; 
 margin-bottom: 20px; 
 margin-top:20px;
 padding-top: 0px;
 padding-bottom: 0px;
}

.filter-panel-container {
  min-height:0px;
}

.frontpage_score {
  background-color:#fff;
  margin-top:20px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
  min-width:283px;
  min-height:228px;
  opacity:0.7;
}

.header-score {
  color:#333;
}

